2001-08-09  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucinternal.*, ucmachine.h, intrinsics.cc, exult.*, keyactions.cc:
	removed the Put_click hack. Replaced it by 'intercept_click_on_item',
	which sets an item that the next click_on_item will return

2001-08-09  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc: Schedule egg Usecode call instead of executing
	immediately. Fixes Moonshade Trial bug.

2001-08-09  Patrick Burke  <takhisisii@yahoo.com.au>
	* conf/*.[cc|h]: added some "const"'s
	* usecode/ucxt/Docs/usecode.txt: merged updates by wjp
	* usecode/ucxt/*: integrated reading from usecode.txt, which broke
	  old-usecode-script output and assembler "comments" (';')

2001-08-08  Ryan Nunn <triforce@merlin.net.au>
	* conf/XMLEntity.cc, usecode/useval.cc: std namespace stuff.
	* actorio.cc, actors.cc, actors.h, usecode/intrinsics.cc: A fix for the bridge
	  crash in Serpent Isle.
	* shapeid.cc, shapeid.h: Now possible to force a shape from any file to be
	  drawn translucent.
	* gamerend.cc, gamewin.cc, gamewin.h, objs/chunks.cc, objs/chunks.h: New 
	  dungeon rendering method. Should hopefully be almost perfect.
	* gumps/Paperdoll_gump.cc: Tweak to hand rendering offsets
	* win32/exult.ico: Updated Icon for Windows
	* msvcstuff/*.*: Misc project setting changes

2001-08-08  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Changed name, cleaned up
	constructors so the header doesn't depend on useval.h
	* usecode/ucscriptop.h:  Script opcodes.

2001-08-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* uctools.h: brought up-to-date to the rest of exult
	* ucinternal.*: risky usecode changes to (hopefully) fix conversations.

2001-08-07  Tristan Tarrant <nadir@users.sourceforge.net>
	* server/objserial.h: add an #include <string>
	* imagewin/scale.cc: copyright of 2xSaI is GPL

2001-08-07  Max Horn <max@quendi.de>
	* bggame.cc: butterfly & "static" are now steered via proper timers, thus should